# PicoSen

./: README.md
PicoSenTcp_binary_and_manual_20240713/binary/FW/: PicoSenTcp_20240707.uf2
PicoSen_binary_and_manual_20240716/binary/FW/: PicoSen_20240716.uf2
src_app/JigApp/JigApp/: FormMain.cs
src_app/JigApp/JigApp/Properties/: AssemblyInfo.cs
src_fw/: How to build[eng].txt  How to build[jpn].txt
src_fw/pico/PicoSen/: CMakeLists.txt
src_fw/pico/PicoSen/PicoSen/: CMakeLists.txt  Cmd.c  Common.c  Common.h  Flash.c  Flash.h  Frame.c  Frame.h  Gpio.c  Gpio.h  Sensor.c  TcpClient.c  TcpCommon.c  TcpCommon.h  TcpServer.c  Timer.c  Ver.h  main.c
src_fw/pico/PicoSenTcp/: CMakeLists.txt
src_fw/pico/PicoSenTcp/PicoSenTcp/: CMakeLists.txt  Cmd.c  Common.c  Common.h  Flash.c  Flash.h  Frame.c  Frame.h  Sensor.c  Sensor.h  TcpServer.c  Timer.c  Timer.h  Ver.h  main.c
